fixed z-index issue of mobile navbar and media query for header background

--- a/src/components/layouts/HeaderBackground.css
+++ b/src/components/layouts/HeaderBackground.css
@@ -43,7 +43,7 @@
 
 
 @media only screen and (max-width: 575.98px) {
-    #headerBackgroundImage {
+    .headerBackgroundImage {
         display: none;
     }
 }
