--- a/src/components/layouts/Navbar/SideDrawer.css
+++ b/src/components/layouts/Navbar/SideDrawer.css
@@ -2,12 +2,12 @@
     position: fixed;
     right: 0;
     top: 8vh;
-    /* z-index: 1000; */
+    z-index: 1000;
     height: 92vh;
     width: 70%;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
 .main-navigation__drawer-nav {
     height: 100%;
-    z-index: 100;
+    z-index: 1000;
 }
